Implement final justifications